--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -32,13 +32,15 @@ button {
   border: 1px solid black;
   border-radius: 10px;
   position: fixed;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform-origin: center;
   transform: translate(-50%, -50%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: top .5s, opacity 0.5s
+
 }
 
 .popup-modal p {
@@ -56,6 +58,7 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  top: 45%
 }
 
 .backdrop.show {
