--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -19,6 +19,10 @@
   background-color: rgb(99, 97, 97);
 
   display: none;
+  
+  animation: growDown 300ms ease-in-out forwards;
+  transform-origin: top center;
+
 }
 
 ul.dropdown-menu li:hover {
@@ -27,6 +31,18 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+}
+
+@keyframes growDown {
+  0% {
+      transform: scaleY(0)
+  }
+  80% {
+      transform: scaleY(1.1)
+  }
+  100% {
+      transform: scaleY(1)
+  }
 }
 
 
