--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,16 @@
 .header  {
+  height: 80px;
+  width: 100%;
   font-family: monospace;
   background: papayawhip;
+
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
+
+
+
 }
 
 .logo {
@@ -9,11 +19,20 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-self: center;
 }
+
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+li {
+  padding: 1em;
 }
 
 a {
