--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -45,4 +45,35 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 8px;
+  padding: 8px;
+  gap: 8px;
+}
+
+.header {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+.container-left {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 8px;
+  padding: 8px;
+  gap: 8px;
+}
+.container-right {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  align-content: flex-end;
+  justify-content: space-between;
+  margin: 8px;
+  padding: 8px;
+  gap: 8px;
 }
